--- a/style.css
+++ b/style.css
@@ -171,11 +171,10 @@ body{
         flex-direction: column;
 
         max-width: 25%;
-        height: 60vh ;
+        height: 60vh;
 
         padding: 10px;
 
-        border: solid 0.5px;
 
         background-color: white;
 
@@ -199,10 +198,11 @@ body{
             .might_like_x{
                 display: flex;
 
-                margin-bottom: 2%;
-
                 width: 100%;
-                min-height: 20%;
+
+                padding: 5%;
+
+                background-color: grey;
             }
 
                 .might_like_content{
